// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given the ItemsList component when props isFavorite is true should render BButton with success variant and Unlike text 1`] = `
<div
  class="ItemComponent"
>
  <div
    class="ItemComponent__image-wrapper"
  >
    <img
      alt="title"
      class="ItemComponent__image"
      data-src="image"
      lazy="loading"
      onerror="this.style.display='none'"
      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
      title="title"
    />
  </div>
   
  <h4>
    
    title
  
  </h4>
   
  <p
    class="ItemComponent__description"
  >
    
    description
  
  </p>
   
  <p>
    
    price
  
  </p>
   
  <a
    class="ItemComponent__email"
    href="mailto:email"
  >
    
    email
  
  </a>
   
  <bbutton-stub
    event="click"
    routertag="a"
    tag="button"
    target="_self"
    type="button"
    variant="success"
  >
    
    Liked
  
  </bbutton-stub>
</div>
`;

exports[`Given the ItemsList component when props pass should render the correct output 1`] = `
<div
  class="ItemComponent"
>
  <div
    class="ItemComponent__image-wrapper"
  >
    <img
      alt="title"
      class="ItemComponent__image"
      data-src="image"
      lazy="loading"
      onerror="this.style.display='none'"
      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
      title="title"
    />
  </div>
   
  <h4>
    
    title
  
  </h4>
   
  <p
    class="ItemComponent__description"
  >
    
    description
  
  </p>
   
  <p>
    
    price
  
  </p>
   
  <a
    class="ItemComponent__email"
    href="mailto:email"
  >
    
    email
  
  </a>
   
  <bbutton-stub
    event="click"
    routertag="a"
    tag="button"
    target="_self"
    type="button"
    variant="light"
  >
    
    Like
  
  </bbutton-stub>
</div>
`;
